--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.53 2004/04/02 10:06:50 krzyzak Exp $
+dnl $Id: configure.in,v 1.54 2004/04/02 12:39:03 krzyzak Exp $
 
 m4_define([gg2_version],[2.0_CVS])
 
@@ -212,11 +212,11 @@ fi
 AC_ARG_WITH(gadu, [  --with-gadu		  Build gadu-gadu plugin	default=no])
 if test "x$with_gadu" = "xyes"; then 
     want_gadu=yes
+    PKG_CHECK_MODULES(OSSL,openssl,[],[])
     prev=`pwd`
     cd src/plugins/gadu_gadu/libgadu
-    ./configure
+    ./configure || exit 1
     cd $prev
-dnl     PKG_CHECK_MODULES(GG,libgadu >= 1.3.1 ,[],want_gadu=no)
 dnl 
 dnl 	if test "$want_gadu" = "no"; then 
 dnl 	    PKG_CHECK_MODULES(GG,libgadu = CVS,want_gadu=yes,want_gadu=no)
