--- a/src/plugins/gadu_gadu/libgadu/configure.in
+++ b/src/plugins/gadu_gadu/libgadu/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.3 2004/04/02 12:04:10 krzyzak Exp $
+dnl $Id: configure.in,v 1.4 2004/04/02 16:43:23 krzyzak Exp $
 
 AC_INIT(lib/libgadu.h)
 AM_INIT_AUTOMAKE([lib/libgadu.h],[1.4])
@@ -150,30 +150,7 @@ if test "x$enable_debug" = "xno"; then
 	AC_MSG_WARN([--disable-debug is obsolete.])
 fi
 
-dnl if test "x$enable_debug" = "xno"; then 
-dnl 	CFLAGS="$CFLAGS -DGG_DEBUG_DISABLE"
-dnl 	CFLAGS_LIBGADU="$CFLAGS_LIBGADU -DGG_DEBUG_DISABLE"
-dnl 	strip_ekg="strip-ekg"
-dnl 	strip_ioctld="strip-ioctld"
-dnl 	strip_libgadu_so="strip-libgadu-so"
-dnl else
-dnl 	CFLAGS="$CFLAGS -g" 
-dnl fi
-
-dnl 
-dnl  Jak± wersjê libgadu kompilujemy?
-dnl
-
-dnl AC_ARG_ENABLE(shared,
-dnl 	[  --enable-shared         Compile shared version of libgadu])
-dnl 
 lib_shared_enabled=no
-dnl   
-dnl if test "x$enable_shared" = "xyes"; then
-dnl 	shared="shared"
-dnl 	install_shared="install-shared"
-dnl 	lib_shared_enabled=yes
-dnl fi
 
 AC_ARG_ENABLE(static,
 	[  --disable-static        Don't compile static version of libgadu
@@ -316,214 +293,6 @@ AC_CHECK_FUNCS(utimes)
 dnl  mkstemp do zapisywania tokenów przy braku libjpeg
 AC_CHECK_FUNCS(mkstemp)
 
-dnl AC_ARG_ENABLE(ui-readline,
-dnl 	[  --enable-ui-readline    Enable readline UI])
-
-dnl AC_ARG_ENABLE(force-ncurses,
-dnl	[  --disable-force-ncurses Force use of ncurses UI])
-
-dnl AC_ARG_ENABLE(ui-ncurses,
-dnl	[  --disable-ui-ncurses    Disable ncurses UI])
-
-dnl if test "x$enable_ui_ncurses" != "xno"; then
-dnl 	AC_DEFINE(WITH_UI_NCURSES, 1, [define if you want ui-ncurses])
-dnl 	OBJS="$OBJS ui-ncurses.o"
-dnl 	ui_ncurses_enabled=yes
-dnl 	ui_ncurses_default=yes
-dnl fi
-
-dnl 
-dnl  Je¶li nie chcemy ncurses, budujemy readline.
-dnl
-  
-dnl if test "x$enable_ui_ncurses" = "xno" -a "x$enable_ui_readline" != "xno"; then
-dnl 	enable_ui_readline=yes
-dnl fi
-
-dnl if test "x$enable_ui_readline" = "xyes"; then
-dnl 	AC_DEFINE(WITH_UI_READLINE, 1, [define if you want ui-readline])
-dnl 	OBJS="$OBJS ui-readline.o"
-dnl 	ui_readline_enabled=yes
-dnl 	ui_ncurses_default=no
-dnl 	ui_readline_default=yes
-dnl fi
-  
-dnl if test "x$enable_ui_readline" = "xyes" -a "x$enable_force_ncurses" = "xyes"; then 
-dnl 	AC_DEFINE(WITH_FORCE_NCURSES, 1, [define if you want ui-ncurses as default])
-dnl 	ui_ncurses_default=yes
-dnl 	ui_readline_default=no
-dnl fi
-  
-dnl if test "x$enable_ui_ncurses" != "xno"; then 
-dnl 	AC_CHECK_NCURSES
-dnl 
-dnl 	if test "x$have_ncurses" = "x"; then
-dnl 		AC_MSG_ERROR([You need ncurses and ncurses-devel packages.])
-dnl 	fi
-dnl 
-dnl 	LDFLAGS="$LDFLAGS $CURSES_LIBS"
-dnl 	CFLAGS="$CFLAGS $CURSES_INCLUDES"
-dnl fi
-dnl 
-dnl AC_ARG_WITH(termcap, 
-dnl 	[  --without-termcap       Used to force ncurses for readline])
-dnl 
-dnl if test "x$enable_ui_readline" = "xyes"; then
-dnl 	if test "x$with_termcap" = "xno"; then
-dnl 		TERMCAP_LIB=""
-dnl 	else
-dnl 		AC_CHECK_LIB(termcap, tgetent, [TERMCAP_LIB="-ltermcap"])
-dnl 		LDFLAGS="$LDFLAGS $TERMCAP_LIB"
-dnl 	fi
-dnl 		if test "x$TERMCAP_LIB" = "x" -a "x$CURSES_LIBS" = "x"; then
-dnl 		AC_CHECK_NCURSES
-dnl 		LDFLAGS="$LDFLAGS $CURSES_LIBS"
-dnl 		CFLAGS="$CFLAGS $CURSES_INCLUDES"
-dnl 	fi
-dnl      
-dnl 	AC_CHECK_READLINE
-dnl 
-dnl 	if test "x$READLINE_LIBS" = "x"; then
-dnl 		AC_MSG_ERROR([You need both readline and readline-devel packages.])
-dnl 	fi
-dnl 
-dnl 	LDFLAGS="$READLINE_LIBS $LDFLAGS"
-dnl 	CFLAGS="$CFLAGS $READLINE_INCLUDES"
-dnl 
-dnl 	AC_CHECK_FUNCS([rl_set_prompt rl_filename_completion_function rl_get_screen_size rl_set_key rl_bind_key_in_map])
-dnl fi
-
-dnl
-dnl  Sprawdzamy libgsm.so, <gsm.h> i <linux/soundcard.h>
-dnl
-  
-dnl AC_ARG_WITH(libgsm,
-dnl 	[  --without-libgsm        Compile without GSM support])
-dnl 
-dnl if test "x$with_libgsm" != "xno"; then
-dnl 	AC_CHECK_LIB(gsm, gsm_decode,
-dnl 	[ 
-dnl 		AC_CHECK_HEADERS(gsm.h,
-dnl 		[
-dnl 			have_gsm_h=yes
-dnl 		], [
-dnl 			AC_CHECK_HEADERS(gsm/gsm.h,
-dnl 			[
-dnl 				have_gsm_h=yes
-dnl 				CFLAGS="$CFLAGS -I/usr/include/gsm"
-dnl 			])
-dnl 		])
-dnl 	])
-dnl 
-dnl 	if test "x$have_gsm_h" = "xyes"; then
-dnl 		AC_CHECK_HEADERS(linux/soundcard.h,
-dnl 		[
-dnl 			AC_DEFINE(HAVE_VOIP, 1, [define if you want VOIP support])
-dnl 			LDFLAGS="-lgsm $LDFLAGS"
-dnl 			OBJS="$OBJS voice.o"
-dnl 		])
-dnl 	fi
-dnl fi
-
-dnl
-dnl  Sprawdzamy libjpeg.so i <jpeglib.h>
-dnl
-  
-dnl AC_ARG_WITH(libjpeg,
-dnl 	[  --without-libjpeg        Compile without JPEG token support])
-dnl 
-dnl if test "x$with_libjpeg" != "xno"; then
-dnl 	AC_CHECK_LIB(jpeg, jpeg_start_decompress,
-dnl 	[ 
-dnl 		AC_CHECK_HEADERS(jpeglib.h,
-dnl 		[
-dnl 			AC_DEFINE(HAVE_LIBJPEG, 1, [define if you have libjpeg])
-dnl 			LDFLAGS="-ljpeg $LDFLAGS"
-dnl 			have_libjpeg=yes
-dnl 		])
-dnl 	])
-dnl fi
-
-dnl
-dnl  Sprawdzamy Pythona
-dnl
-    
-dnl AC_CHECK_PYTHO
-  
-dnl if test "x$have_python" = "xyes"; then
-dnl	OBJS="$OBJS python.o"
-dnl	LDFLAGS="$PYTHON_LIBS $LDFLAGS"
-dnl	CFLAGS="$CFLAGS $PYTHON_INCLUDES"
-dnl fi
-
-dnl
-dnl  Sprawdzamy libz.so, <zlib.h>
-dnl
-dnl
-  
-dnl AC_ARG_WITH(zlib,
-dnl 	[  --without-zlib          Compile without zlib (compressed logs)])
-dnl 
-dnl if test "x$with_zlib" != "xno"; then
-dnl 	AC_CHECK_LIB(z, gzopen,
-dnl 	[
-dnl 		AC_CHECK_HEADERS(zlib.h,
-dnl 		[
-dnl 			AC_DEFINE(HAVE_ZLIB, 1, [define if you want compressed logs])
-dnl 			LDFLAGS="-lz $LDFLAGS"
-dnl 			have_zlib=yes
-dnl 		])
-dnl 	])
-dnl fi
-
-dnl
-dnl  Sprawdzamy, czy u¿ytkownik chce RTG
-dnl
-
-dnl AC_ARG_ENABLE(wap,
-dnl 	[  --enable-wap            Compile WAP gateway])
-dnl 
-dnl 	if test "x$enable_wap" = "xyes"; then
-dnl 		if test -d ekgwap; then
-dnl 			make_ekgwap="make-ekgwap"
-dnl 			install_ekgwap="install-ekgwap"
-dnl 			AC_DEFINE(WITH_WAP, 1, [define if you want WAP support])
-dnl 		else
-dnl 			AC_MSG_ERROR([You have to download RTG source code from http://www.comm.pl/~serek/ekgwap/])
-dnl 	fi
-dnl fi
-
-dnl
-dnl  Sprawdzamy ioctld
-dnl
-
-dnl AC_ARG_ENABLE(ioctld,
-dnl 	[  --enable-ioctld         Compile ioctld])
-dnl 
-dnl if test "x$enable_ioctld" = "xyes"; then 
-dnl 	AC_CHECK_HEADERS(linux/kd.h,
-dnl 	[
-dnl 		have_ioctld_includes=yes
-dnl 	], [
-dnl 		AC_CHECK_HEADERS(sys/kbio.h,
-dnl 		[
-dnl 			have_ioctld_includes=yes
-dnl 		])
-dnl 	])
-dnl 
-dnl 	if test "x$have_ioctld_includes" = "xyes"; then
-dnl 		CFLAGS="$CFLAGS -DWITH_IOCTLD -DIOCTLD_PATH=\\\"${libexecdir}/ioctld\\\""
-dnl 		ioctld="ioctld"
-dnl 		install_ioctld="install-ioctld"
-dnl 	fi
-dnl fi
-
-dnl
-dnl  Wszystkie testy nale¿y dodawaæ POWY¯EJ testu ioctld, poniewa¿ w przypadku
-dnl  jego powodzenia zawarto¶æ CFLAGS skutecznie blokuje dzia³anie gcc
-dnl  odpalanego przez ./configure
-dnl
-
 if test "x$enable_static" = "xno" -o "x$enable_dynamic" = "xyes"; then 
 	lib_shared_default=yes
 	lib_static_default=no
@@ -533,6 +302,10 @@ else
 	lib_shared_default=no
 	lib_static_default=yes
 fi
+
+lib_shared_default=no
+lib_static_default=yes
+
 ekg="ekg"
 install_ekg="install-ekg"
 clean_ekg="clean-ekg"
@@ -577,23 +350,6 @@ else
 	echo " - openssl: disabled"
 fi
 
-dnl if test "x$have_ioctld_includes" = "xyes"; then
-dnl 	echo " - ioctld: enabled"
-dnl else
-dnl 	echo " - ioctld: disabled"
-dnl fi
-
-dnl if test "x$have_python" = "xyes"; then
-dnl 	echo " - python: enabled"
-dnl else
-dnl 	echo " - python: disabled"
-dnl fi
-
-dnl if test "x$have_zlib" = "xyes"; then
-dnl 	echo " - zlib: enabled"
-dnl else
-dnl 	echo " - zlib: disabled"
-dnl fi
 
 if test "x$have_pthread" = "xyes"; then
 	echo " - pthread: enabled"
@@ -601,35 +357,6 @@ else
 	echo " - pthread: disabled"
 fi
 
-dnl if test "x$have_libjpeg" = "xyes"; then
-dnl 	echo " - libjpeg: enabled"
-dnl else
-dnl 	echo " - libjpeg: disabled"
-dnl fi
-
-dnl if test "x$ui_readline_enabled" = "xyes"; then
-dnl 	if test "x$ui_readline_default" = "xyes"; then
-dnl 		echo " - ui-readline: enabled (default)"
-dnl 	else
-dnl 		echo " - ui-readline: enabled"
-dnl 	fi
-dnl else
-dnl 	echo " - ui-readline: disabled"
-dnl fi
-
-dnl if test "x$ui_ncurses_enabled" = "xyes"; then
-dnl 	if test "x$ui_ncurses_default" = "xyes"; then
-dnl 		echo " - ui-ncurses: enabled (default)"
-dnl 	else
-dnl 		echo " - ui-ncurses: enabled"
-dnl 	fi
-dnl else
-dnl 	echo " - ui-ncurses: disabled"
-dnl fi
-
-dnl if test "x$enable_wap" = "xyes"; then
-dnl 	echo " - rtg: enabled"
-dnl fi
 
 echo
 
