--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
-dnl $Id: configure.in,v 1.55 2004/04/02 16:43:21 krzyzak Exp $
+dnl $Id: configure.in,v 1.56 2004/04/02 18:51:58 krzyzak Exp $
 
-m4_define([gg2_version],[2.0_CVS])
+m4_define([gg2_version],[2.0])
 
 AC_INIT(gg2,[gg2_version])
 AM_INIT_AUTOMAKE([gg2],[gg2_version])
@@ -82,7 +82,7 @@ PKG_CHECK_MODULES(GTHREAD,gthread-2.0 >= 2.2.0,[
    LDFLAGS="$LDFLAGS $GTHREAD_LIBS"
     ],AC_MSG_ERROR($GLIB_PKG_ERRORS))
 
-AC_ARG_ENABLE(debug, [  --enable-debug	  debug mode			default=enabled],
+AC_ARG_ENABLE(debug, [  --enable-debug	  debug mode			default=disabled],
     if test x$enableval = xyes; then
 	 want_debug=yes
     else
@@ -92,14 +92,14 @@ AC_ARG_ENABLE(debug, [  --enable-debug	  debug mode			default=enabled],
 		want_debug=yes
 	fi
     fi,
-    want_debug=yes)
+    want_debug=no)
 
 if test x$want_debug = xyes; then
   AC_DEFINE(GGADU_DEBUG)
 fi
 
 
-AC_ARG_ENABLE(gdb, [  --enable-gdb		  gdb support			default=enabled],
+AC_ARG_ENABLE(gdb, [  --enable-gdb		  gdb support			default=disabled],
     if test x$enableval = xyes; then
 	 want_gdb=yes
     else
@@ -109,7 +109,7 @@ AC_ARG_ENABLE(gdb, [  --enable-gdb		  gdb support			default=enabled],
 		want_gdb=yes
 	fi
     fi,
-    want_gdb=yes)
+    want_gdb=no)
 
 
 if test x$want_gdb = xyes; then
@@ -215,11 +215,7 @@ if test "x$with_gadu" = "xyes"; then
     PKG_CHECK_MODULES(OSSL,openssl,[],[])
     prev=`pwd`
     cd src/plugins/gadu_gadu/libgadu
-    
-    (
     ./configure CFLAGS="$CFLAGS" || exit 1
-    )
-    
     cd $prev
 dnl 
 dnl 	if test "$want_gadu" = "no"; then 
