--- a/src/plugins/gadu_gadu/libgadu/configure.in
+++ b/src/plugins/gadu_gadu/libgadu/configure.in
@@ -1,6 +1,7 @@
-dnl $Id: configure.in,v 1.5 2004/04/06 21:52:50 krzyzak Exp $
+dnl $Id: configure.in,v 1.6 2004/04/06 22:12:10 krzyzak Exp $
 
 AC_INIT(lib/libgadu.h)
+AM_INIT_AUTOMAKE([libgadu],[1.4])
 AC_PREREQ(2.50)
 
 dnl AC_SUBST(CFLAGS_LIBGADU)
