--- a/src/plugins/gadu_gadu/Makefile.am
+++ b/src/plugins/gadu_gadu/Makefile.am
@@ -20,8 +20,8 @@ libgadu_gadu_plugin_la_SOURCES = \
 libgadu_gadu_plugin_la_LIBADD =  \
 	    $(top_srcdir)/lib/libgg2_core.la 
     
-libgadu_gadu_plugin_la_LDFLAGS = -avoid-version -pthread $(OSSL_LIBS)
-libgadu_gadu_plugin_la_CFLAGS =  -I./libgadu/lib -I/usr/kerberos/include/ $(CFLAGS) $(OSSL_CFLAGS)
+libgadu_gadu_plugin_la_LDFLAGS = -avoid-version -pthread $(OPENSSL_LIBS)
+libgadu_gadu_plugin_la_CFLAGS =  -I./libgadu/lib -I/usr/kerberos/include/ $(CFLAGS) $(OPENSSL_INCLUDES)
 
 EXTRA_DIST = libgadu/autogen.sh \
 	libgadu/compat \
