- fixes build process with --with-included-gettext option (krzak) - menu separators added in sms plugin

--- a/config.h.in
+++ b/config.h.in
@@ -4,6 +4,24 @@
 #undef PACKAGE
 #undef VERSION
 #undef GGADU_DEBUG
+#undef HAVE_STDINT_H
+#undef HAVE_STDLIB_H
+#undef HAVE_INTMAX_T
+#undef HAVE_INTTYPES_H
+#undef HAVE_STDINT_H_WITH_UINTMAX
+#undef HAVE_LC_MESSAGES
+#undef HAVE_LOCALE_H
+#undef HAVE_STPCPY
+#undef HAVE_MEMCPY
+#undef HAVE_MEMPCPY
+#undef HAVE_NL_TYPES_H
+#undef HAVE_MALLOC_H
+#undef HAVE___SECURE_GETENV
+#undef ICONV_CONST
+#undef HAVE_STRNCASECMP
+#undef HAVE_STRINGS_H
+#undef HAVE_STRING_H
 #undef ENABLE_NLS
 #undef WORDS_BIGENDIAN
 #undef PERL_EMBED
+#undef INSTALLPREFIX
