- tropic.theme and office.theme sent by Krzysztof Foltman <krzysztof@foltman.com>

--- a/themes/Makefile.am
+++ b/themes/Makefile.am
@@ -11,6 +11,8 @@ theme_DATA = \
     vblue2.theme \
     vgreen2.theme \
     vred2.theme \
-    white2.theme
+    white2.theme \
+    tropic.theme \
+    office.theme
 
 EXTRA_DIST = $(theme_DATA)
