--- a/contrib/gghist/Makefile.am
+++ b/contrib/gghist/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS = gghist
 
-gghist_SOURCES = a6.c gg_history.h
+gghist_SOURCES =  gg_history.c gg_history.h a6.c
 
 gghist_CFLAGS = $(CFLAGS) $(GTK_CFLAGS) -DPACKAGE_LIB_DIR=\"$(libdir)/$(PACKAGE)\" 
 gghist_LDFLAGS = $(LDFLAGS) $(GTK_LIBS)
