- some changes with tooltips (GUI/krzak)

--- a/gg2.desktop
+++ b/gg2.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Encoding=UTF-8
 Name=GNU Gadu
 Comment=Instant Messanger Client
-Comment[pl]=Wolne Gadanie
+Comment[pl]=(fry)wolne Gadanie
 TryExec=gg2
 Exec=gg2
 Icon=gg2.png
